# shiftory-server/internal/platform/httpserver/server.go
@@ -94,6 +94,10 @@ func New(deps Dependencies) (http.Handler, error) {
 	protected.GET("/invitations/mine", s.listMyInvitations)
 	protected.GET("/preferences", s.getPreferences)
 	protected.PUT("/preferences", s.updatePreferences)
+	protected.GET("/me/schedules", s.listSchedules)
+	protected.PUT("/me/schedules/:date", s.upsertSchedule)
+	protected.POST("/me/schedules/batch", s.batchSchedules)
+	protected.GET("/me/schedules/:date/history", s.scheduleHistory)
 	protected.GET("/workspaces", s.listWorkspaces)
 	protected.POST("/workspaces", s.createWorkspace)
 	protected.PATCH("/workspaces/:workspaceId", s.updateWorkspace)
